--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>To Do List</title>
 </head>
 <body>
+    <header>
+        <div id="date-header">
+
+        </div>
+    </header>
+    <section id="task-input">
+        <form method="POST" action="#">
+            <label for="task">What do you have to do today?</label>
+            <input type="text" id="task" name="task" placeholder="Add a new task!">
+            <button type="submit" id="task-submit">Create task.</button>
+        </form>
+    </section>
+    <section id="task-list">
+        <ul>
+            
+        </ul>
+    </section>
 <script src="assets/js/script.js"></script>  
 </body>
 </html>
