add html for auto text area

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
         </div>
     </header>
+    <section id="list-benefits">
+        <span class="auto-text"></span>
+    </section>
     <section id="task-input">
         <form method="POST" action="#">
             <label for="task">What do you have to do today?</label>
