import script tag for auto text display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </header>
     <section id="list-benefits">
-        <span class="auto-text"></span>
+        <span class="auto-text">Auto Text Here</span>
     </section>
     <section id="task-input">
         <form method="POST" action="#">
