add auto text feature and styling to user input area

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </div>
     </header>
     <section id="list-benefits">
-        <span class="auto-text">Auto Text Here</span>
+        <div id="auto-container">
+            <span class="typed-text"></span>
+            <span class="cursor">&nbsp;</span>
+    </div>
     </section>
     <section id="task-input">
         <form method="POST" action="#">
