--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
     </div>
     </section>
     <section id="task-input">
-        <form method="POST" action="#">
+        <form method="get" id="'form">
             <label for="task">What do you have to do today?</label>
             <input type="text" id="task" name="task" placeholder="Add a new task!">
-            <button type="submit" id="task-submit">Create task.</button>
+            <button id="task-submit">Create task.</button>
         </form>
     </section>
-    <section id="task-list">
-        <ul>
+    <section id="list">
+        <div class="list-container">
+        <ul id="task-list-ul">
             
         </ul>
+    </div>
     </section>
 <script src="assets/js/script.js"></script>  
 </body>
