add html for modal

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
 </head>
 <body>
     <header>
+        <button id="open-modal">How To Use The List</button>
+        <div id="modal" class="modal">
+            <div id="modal-header">
+                <div id="modal-title">How To Use This Site</div>
+                <button id="close-modal">&times;</button>
+                <div id="modal-body">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Laboriosam, rem!
+                </div>
+            </div>
+        </div>
+        <div id="overlay"></div>
+    </header>
+    <section>
         <div id="date-header">
 
         </div>
-    </header>
+    </section>
     <section id="list-benefits">
         <div id="auto-container">
             <span class="typed-text"></span>
@@ -33,6 +47,7 @@
         </ul>
     </div>
     </section>
+    
 <script src="assets/js/script.js"></script>  
 </body>
 </html>
