add html for change theme button in header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </div>
         </div>
         <div id="overlay"></div>
+        <button id="change-theme">Change Theme</button>
     </header>
     <section>
         <div id="date-header">
