add required attribute to task input

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
                 <button id="close-modal">&times;</button>
                  </div>
                 <div id="modal-body">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Laboriosam, rem!
+                    <div id="step-one">
+                        <h2>
+                            Step One
+                        </h2>
+                    </div>
+                    <div id="add-task-instructions">
+                        <p id="instructions">Type out whatever task you have to do into the <em>Add task here!</em> section.</p>
+                    </div>
                 </div>
         </div>
         <div id="overlay"></div>
