add if statement to prevent button colors reverting to light them colors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="task-input">
         <form method="get" id="'form">
             <label for="task">What do you have to do today?</label>
-            <input type="text" id="task" name="task" placeholder="Add a new task!">
+            <input type="text" id="task" name="task" placeholder="Add a new task!" required>
             <button id="task-submit">Create task.</button>
         </form>
     </section>
