add functionality to change border lines colors on theme changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>To Do List</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <button id="open-modal">How To Use The List</button>
         <div id="modal" class="modal">
             <div id="modal-header">
