add content and styling to modal body

--- a/index.html
+++ b/index.html
@@ -16,13 +16,29 @@
                 <button id="close-modal">&times;</button>
                  </div>
                 <div id="modal-body">
-                    <div id="step-one">
+                    <div class="modal-steps">
                         <h2>
                             Step One
                         </h2>
                     </div>
-                    <div id="add-task-instructions">
-                        <p id="instructions">Type out whatever task you have to do into the <em>Add task here!</em> section.</p>
+                    <div class="add-task-instructions">
+                        <p class="instructions">Type out whatever task you have to do into the <em>Add task here!</em> section and click "Create Task"</p>
+                    </div>
+                    <div class="modal-steps">
+                        <h2>
+                            Step Two
+                        </h2>
+                    </div>
+                    <div class="add-task-instructions">
+                        <p class="instructions">When you finish your task, click on the task to mark it as complete.</p>
+                    </div>
+                    <div class="modal-steps">
+                        <h2>
+                            Step Three
+                        </h2>
+                    </div>
+                    <div class="add-task-instructions">
+                        <p class="instructions">When you want to remove your task, double click on the task to remove it. </p>
                     </div>
                 </div>
         </div>
